# tap-yandex-cloud

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  meltano.yml  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _del_run-zizmor.yml  package.yml  release.yml  test.yml
tap-yandex-cloud/: __main__.py  streams.py  tap.py
tap_yandex_cloud/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
