[build-system]
requires = [
    "hatchling>=1.29.0,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "tap-yandex-cloud"
dynamic = ["version"]
description = "Singer tap for YandexCloud, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Artem Rufanov", email = "arufanov@gmail.com" }]
keywords = [
    "ELT",
    "YandexCloud",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
dependencies = [
    "singer-sdk~=0.54.2",
    "yandexcloud>=0.354.0",
    "grpcio>=1.76.0",
    "protobuf>=6.33.0",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
# Optional dependensies for example s3:
#s3 = [
#    "s3fs>=2026.1.0",
#]

[project.scripts]
# CLI declaration
tap-yandex-cloud = 'tap_yandex_cloud.tap:TapYandexCloud.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    "pytest-github-actions-annotate-failures>=0.4",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.18",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma

    # Temporary scaffold ignores. Remove after implementing real streams.
    "ERA001",  # commented-out code
    "FIX002",  # TODO comments
    "TD002",   # missing TODO author
    "TD003",   # missing TODO issue link
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # assert is used by pytest
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "typing",
    { product = [
        { prefix = "3.", start = 12 },
    ] },
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
    "CI",
    "GITHUB_*",
    "TAP_YANDEX_CLOUD_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_yandex_cloud", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_yandex_cloud", "tests" ], extend = true } ],
]
